--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>תוצאות הגרלה</title>
+    <title>הגרלה קבוצות חדר בריחה - קרב הכספות</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -70,16 +70,16 @@
                 font-size: 24px;
             }
             #birthdayMessage {
-                font-size: 32px;
+                font-size: 30px;
             }
             #birthdayMessage .sarah {
-                font-size: 40px;
+                font-size: 60px;
             }
         }
     </style>
 </head>
 <body>
-    <h1>תוצאות הגרלה</h1>
+    <h1>הגרלה קבוצות חדר בריחה - קרב הכספות</h1>
 
     <div id="birthdayMessage">🎉 יום הולדת שמח <span class="sarah">שרה</span> 40! 🎉</div>
     
